<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/teal_700"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:orientation="vertical"
        android:layout_weight="0.1"
        android:layout_marginTop="80dp"
        >

        <TextView
            android:id="@+id/correctTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="40dp"
            android:text="@string/correct_answers"
            android:textSize="30sp"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:id="@+id/incorrectTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="40dp"
            android:text="@string/incorrect_answers"
            android:layout_marginBottom="10dp"
            android:textSize="30sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/questionTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/question_text"
        android:textSize="30sp"
        android:padding="20dp"
        android:gravity="center"
        />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <Button
                android:id="@+id/true_button"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/true_Button"
                android:textSize="30sp" />

            <Button
                android:id="@+id/false_button"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/false_Button"
                android:textSize="30sp" />
        </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="0.2"
        >

        <Button
            android:id="@+id/back_button"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/back_button"
            android:textSize="30sp"

        />

        <Button
            android:id="@+id/next_button"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/next_button"
            android:textSize="30sp"
           />
    </LinearLayout>


    </LinearLayout>
